force-app/main/default/objects/RD_Pricing__c/fields/Third_PartyWitnessTestLotCharge_Override__c.field-meta.xml
<CustomField>
    <fullName>Third_PartyWitnessTestLotCharge_Override__c</fullName>
    <label>Third PartyWitnessTestLotCharge Override</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>