force-app/main/default/objects/RD_Pricing__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <label>Total Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>