force-app/main/default/objects/RD_Pricing__c/fields/Vacuum_Support_Price_Each_Override__c.field-meta.xml
<CustomField>
    <fullName>Vacuum_Support_Price_Each_Override__c</fullName>
    <label>Vacuum Support Price Each Override</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>