force-app/main/default/objects/RD_Pricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rupture_Disc__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rupture_Disc__c</field>
        <operation>equals</operation>
        <value>RD-0001300</value>
    </filters>
    <label>All</label>
</ListView>